force-app/main/default/objects/Subject__c/Subject__c.object-meta.xml
<CustomObject>
    <label>Subject</label>
    <nameField>
        <displayFormat>SBJ-{0000000000}</displayFormat>
        <label>Subject ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>