force-app/main/default/objects/Subject__c/fields/Faculty_Name__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Name__c</fullName>
    <formula>Faculty__r.Faculty_Name__c</formula>
    <label>Faculty Name</label>
    <type>Text</type>
</CustomField>