force-app/main/default/objects/Subject__c/fields/Is_Optional__c.field-meta.xml
<CustomField>
    <fullName>Is_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Optional</label>
    <type>Checkbox</type>
</CustomField>