force-app/main/default/objects/Subject__c/fields/Number_of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credits__c</fullName>
    <label>Number of Credits</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>