force-app/main/default/objects/Subject__c/fields/Parallel_Subject__c.field-meta.xml
<CustomField>
    <fullName>Parallel_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parallel Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Subjects (Parallel Subject)</relationshipLabel>
    <relationshipName>Parallel_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>