force-app/main/default/objects/Subject__c/fields/Parallel_Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Parallel_Subject_Name__c</fullName>
    <formula>Parallel_Subject__r.Subject_Name__c</formula>
    <label>Parallel Subject Name</label>
    <type>Text</type>
</CustomField>