force-app/main/default/objects/Subject__c/fields/Prerequisite_Subject__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prerequisite Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Subjects</relationshipLabel>
    <relationshipName>Dependent_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>