force-app/main/default/objects/Subject__c/fields/Prerequisite_Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Subject_Name__c</fullName>
    <formula>Prerequisite_Subject__r.Subject_Name__c</formula>
    <label>Prerequisite Subject Name</label>
    <type>Text</type>
</CustomField>