force-app/main/default/objects/Subject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Semester__c</columns>
    <columns>Subject_Name__c</columns>
    <columns>Faculty_Name__c</columns>
    <columns>Number_of_Credits__c</columns>
    <columns>Is_Optional__c</columns>
    <columns>Parallel_Subject_Name__c</columns>
    <columns>Prerequisite_Subject_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>